--- a/Build-a-Tic-Tac-Toe-Game/style.css
+++ b/Build-a-Tic-Tac-Toe-Game/style.css
@@ -84,3 +84,57 @@ body {
     /* 默认基线对齐 ，改成中线对其*/
     vertical-align: middle;
 }
+
+/* .chessboard .chessX {
+    color: #008000;
+} */
+
+.gameOver {
+    /* display: none; */
+    width: 500px;
+    height: 250px;
+    background-color: #fff;
+    
+    text-align: center;
+    box-shadow: 3px 3px 20px #000000;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -250px;
+    margin-top: -125px;
+}
+
+.gameOver h1 {
+    margin: 0;
+    font-size: 3rem;
+    height: 100px;
+    line-height: 100px;
+}
+
+.gameOver p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    margin: 10px;
+}
+
+.gameOver button {
+    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+    width: 150px;
+    height: 50px;
+    margin: 15px;
+    background-color:#dbdbdb;
+    border: none;
+    box-shadow: 3px 3px 1px #444;
+    outline: none;
+    border-radius: 3px;
+}
+
+.gameOver button:active {
+    color: #fff;
+    background-color: #1a6aac;
+    box-shadow: none;
+    /* box-shadow: 2px 2px 2px #444 inset; */
+}
