--- a/Build-a-Tic-Tac-Toe-Game/style.css
+++ b/Build-a-Tic-Tac-Toe-Game/style.css
@@ -38,10 +38,15 @@ body {
     font-size: 6rem;
     background-color: #cacaca;
     border-radius: 4px;
+    box-shadow: 2px 2px 2px #444;
     cursor: pointer;
     margin: 10px;
 }
 
+.welcome span:active {
+    background-color: #444;
+    box-shadow: none;
+}
 .welcome .x {
     color: #008000;
 }
@@ -73,16 +78,24 @@ body {
     font-family: sans-serif;
     text-align: center;
     font-size: 6rem;
+    text-shadow: 3px 3px 2px #333;
     line-height: 154.6px;
     margin: 6px;
     list-style: none;
     display: inline-block;
     width: 154.6px;
     height: 154.6px;
-    background-color: #fff;
+    background-color: rgb(218, 218, 218);
     box-shadow: 3px 3px 2px #444 inset;
+    border-radius: 3px;
     /* 默认基线对齐 ，改成中线对其*/
     vertical-align: middle;
+    cursor: pointer;
+}
+.chessboard li:active {
+    /* background-color: #286494; */
+    box-shadow: 5px 5px 2px #444 inset;
+    text-shadow: 5px 5px 2px #333;
 }
 
 /* .chessboard .chessX {
@@ -90,7 +103,7 @@ body {
 } */
 
 .gameOver {
-    /* display: none; */
+    display: none;
     width: 500px;
     height: 250px;
     background-color: #fff;
@@ -130,6 +143,7 @@ body {
     box-shadow: 3px 3px 1px #444;
     outline: none;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .gameOver button:active {
