--- a/Build-a-Tic-Tac-Toe-Game/style.css
+++ b/Build-a-Tic-Tac-Toe-Game/style.css
@@ -7,7 +7,7 @@ body {
 
 .welcome {
     /* display: none; */
-    max-width: 500px;
+    width: 500px;
     height: 250px;
     background-color: #fff;
     text-align: center;
@@ -55,6 +55,9 @@ body {
 .welcome .o {
     color: #ff0000;
 }
+.welcome h1 {
+    padding: 0 10px;
+}
 
 .chessboard {
     width: 500px;
@@ -74,8 +77,10 @@ body {
 }
 
 .chessboard .tip {
-    color: #008000;
-    width: 80px;
+    display: inline-block;
+    vertical-align: middle;
+    color: #000000;
+    width: 150px;
     height: 30px;
     background: #cacaca;
     margin: 0 0 0 6px;
@@ -85,6 +90,14 @@ body {
     text-align: center;
     line-height: 30px;
     border-radius: 3px;
+}
+.chessboard .tip:nth-of-type(1){
+    margin-right: 65px;
+}
+.chessboard .p1,
+.chessboard .p2 {
+    width: 120px;
+
 }
 .chessboard ul{
     font-size: 0;
@@ -107,6 +120,7 @@ body {
     /* 默认基线对齐 ，改成中线对其*/
     vertical-align: middle;
     cursor: pointer;
+    transition: all 0.3s linear;
 }
 .chessboard li:active {
     /* background-color: #286494; */
@@ -119,7 +133,6 @@ body {
 } */
 
 .gameOver {
-    display: none;
     width: 500px;
     height: 250px;
     background-color: #fff;
@@ -127,11 +140,13 @@ body {
     text-align: center;
     box-shadow: 3px 3px 20px #000000;
     position: absolute;
-    left: 50%;
+    /* left: 50%; */
     top: 50%;
+    left: -500px;
     margin-left: -250px;
     margin-top: -125px;
     z-index: 1;
+    transition: all 0.3s ease;
 }
 
 .gameOver h1 {
@@ -152,7 +167,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.4rem;
     font-weight: bold;
-    width: 150px;
+    width: 180px;
     height: 50px;
     margin: 15px;
     background-color:#dbdbdb;
@@ -161,6 +176,10 @@ body {
     outline: none;
     border-radius: 3px;
     cursor: pointer;
+}
+
+.gameOver .result {
+    color: #ff0000;
 }
 
 .gameOver button:active {
