--- a/Build-a-Tic-Tac-Toe-Game/style.css
+++ b/Build-a-Tic-Tac-Toe-Game/style.css
@@ -7,7 +7,8 @@ body {
 
 .welcome {
     /* display: none; */
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     height: 250px;
     background-color: #fff;
     text-align: center;
