--- a/Build-a-Simon-Game/style.css
+++ b/Build-a-Simon-Game/style.css
@@ -64,10 +64,12 @@ body {
     border-radius: 100%;
 }
 
-.control h1{
-    font-size: 5vh;
+.control h1 {
+    font-family: serif;
+    font-weight: bold;
+    font-size: 6vh;
     margin: 0;
-    padding-top: 12%;
+    padding-top: 13%;
     width: 100%;
     height: 35%;
     vertical-align: middle;
